updated the index file

--- a/index.html
+++ b/index.html
@@ -1,32 +1,54 @@
 <!DOCTYPE html>
-<html>
 <head>
 	<title>Calculator</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
+	<link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+	<link rel='icon' type='image/x-icon' href='favicon.png' />
 </head>
+
 <body>
-	<div class="calculator">
-		<input type="text" id="result" disabled>
-		<button class="operator" onclick="clearResult()">C</button>
-		<button class="operator" onclick="backspace()">←</button>
-		<button class="operator" onclick="getResult('%')">%</button>
-		<button class="operator" onclick="getResult('/')">÷</button>
-		<button onclick="getResult('7')">7</button>
-		<button onclick="getResult('8')">8</button>
-		<button onclick="getResult('9')">9</button>
-		<button class="operator" onclick="getResult('*')">x</button>
-		<button onclick="getResult('4')">4</button>
-		<button onclick="getResult('5')">5</button>
-		<button onclick="getResult('6')">6</button>
-		<button class="operator" onclick="getResult('-')">-</button>
-		<button onclick="getResult('1')">1</button>
-		<button onclick="getResult('2')">2</button>
-		<button onclick="getResult('3')">3</button>
-		<button class="operator" onclick="getResult('+')">+</button>
-		<button onclick="getResult('0')">0</button>
-		<button onclick="getResult('.')">.</button>
-		<button class="operator" onclick="calculateResult()">=</button>
+	<div class="container">
+		<h1><a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;" href="" onclick="location.reload();">CALCULATOR</a></h1 >
+		<div class="calculator">
+			<input type="text" name="screen" id="answer" readonly>
+			<table>
+				<tr>
+					<td><button>(</button></td>
+					<td><button>)</button></td>
+					<td><button style="background-color: #f01600; font-weight: bold; color: #ecf0f1;">C</button></td>
+					<td><button>%</button></td>
+				</tr>
+				<tr>
+					<td><button>7</button></td>
+					<td><button>8</button></td>
+					<td><button>9</button></td>
+					<td><button>X</button></td>
+				</tr>
+				<tr>
+					<td><button>4</button></td>
+					<td><button>5</button></td>
+					<td><button>6</button></td>
+					<td><button>-</button></td>
+				</tr>
+				<tr>
+					<td><button>1</button></td>
+					<td><button>2</button></td>
+					<td><button>3</button></td>
+					<td><button>+</button></td>
+				</tr>
+				<tr>
+					<td><button>0</button></td>
+					<td><button style="font-weight: bold;">.</button></td>
+					<td><button>/</button></td>
+					<td><button style="background-color: #25db72; font-weight: bold; color: #ecf0f1;">=</button></td>
+				</tr>
+			</table>
+		</div>
 	</div>
-	<script src="calc.js"></script>
+	<div id="bar1" class = "bars"></div>
+	<div id="bar2" class = "bars"></div>
+	<div id="history">
+	</div>
 </body>
+<script src="calc.js"></script>
 </html>
