--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html lang="en">
+
 <head>
 	<title>Calculator</title>
 	<link rel="stylesheet" href="style.css">
@@ -8,7 +10,7 @@
 
 <body>
 	<div class="container">
-		<h1><a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;" href="" onclick="location.reload();">CALCULATOR</a></h1 >
+		<h1><a style="text-decoration: none; color: #f1c40f; margin-left: 0.25rem;" href="" onclick="location.reload();">CALCULATOR</a><img id="historybutton" src="history.png"></h1 >
 		<div class="calculator">
 			<input type="text" name="screen" id="answer" readonly>
 			<table>
@@ -50,5 +52,6 @@
 	<div id="history">
 	</div>
 </body>
+<script src="hist.js"></script>
 <script src="calc.js"></script>
 </html>
